Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-20036

[comctl32] Exception in PROPSHEET_DoCommand when psInfo is NULL.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.16
    • Wine

    Description

      reactos-bootcd-0.4.16-dev-847-g386fccd-x86-gcc-lin-dbg

      "The Queen of Heart 99 SE" : https://www.myabandonware.com/game/the-queen-of-heart-99-se-bzt

      • Use control.exe from the zip file
      • Click on OK
      • Exception

      err:(win32ss/user/user32/windows/message.c:1556) Exception Dialog unicode 0048970F Msg 273 pti B3FC72A8 Wndpti FEEEFEEE 

      This is due to missing NULL psInfo  management in PROPSHEET_DoCommand for IDOK

      See Wine MR: https://gitlab.winehq.org/wine/wine/-/merge_requests/7622 and https://bugs.winehq.org/show_bug.cgi?id=57987 

      Attachments

        Issue Links

          Activity

            People

              valina35 valina35
              KRosUser KRosUser
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: