[WINESYNC][COMCTL32] Fix Exception in PROPSHEET_DoCommand (#7943)

CORE-20036

Import Wine commit:
comctl32: Avoid segfault in PROPSHEET_DoCommand when psInfo is NULL.
wine commit id affd5177bba907a015d1c6fc8ac9970731125268 by Yuri Hérouard <yuri.herouard@gmail.com>